--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "jest",
-    "lint": "eslint src/**/*.ts"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "clean": "rm -rf dist",
+    "prepare": "npm run build",
+    "dev": "npm run build:watch",
+    "examples": "cd examples && npm start",
+    "prepack": "npm run build"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -24,5 +34,9 @@
   },
   "peerDependencies": {
     "react": ">=16.8.0"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ]
 }
