--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "prettier": "^3.3.3",
-    "react": "^18.2.0"
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
@@ -30,7 +29,8 @@
     "@typescript-eslint/parser": "^5.0.0",
     "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "react": "^18.2.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
